# FMRO

./: .gitignore  README.md
.github/workflows/: ci.yml  pc-auto-crawl.yml  release.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
automation/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
automation/fmro_auto/: orchestrator.py
automation/fmro_auto/adapters/: base.py  boss_zhipin.py  career_page.py  liepin.py  (+1 more)
automation/scripts/: run.sh
automation/tests/: conftest.py  test_api_client.py  test_company_resolver.py  test_integration.py  test_liepin_adapter.py  test_scrape_utils.py  test_shixiseng_adapter.py  test_smoke.py
backend/: .env.example  README.md  build.gradle.kts  settings.gradle.kts
docs/: ANDROID_DEV.md  API.md  ARCHITECTURE.md  PRD.md  PYTHON_REFACTOR_PLAN.md  SETUP.md
infra/: docker-compose.yml  schema.sql
pc/: .gitignore  README.md  companies.yaml  cookie.template.yaml  cookies.json  pyproject.toml
pc/data/: fmro_pc.db
pc/fmro_pc/: __init__.py  config.py  database.py  models.py
pc/fmro_pc/cli/: main.py
pc/fmro_pc/crawl/: __init__.py  browser.py  dedupe.py  fetcher.py  live_browser.py  normalize.py  runner.py
pc/fmro_pc/parsers/: __init__.py  _common.py  base.py  boss_zhipin.py  generic_html.py  liepin.py  registry.py  shixiseng.py
pc/fmro_pc/services/: __init__.py  export.py  jobs.py
pc/fmro_pc/storage/: __init__.py  repository.py
pc/fmro_pc/web/: __init__.py  app.py
pc/output/: jobs.csv  jobs.md
pc/scripts/: build_site.py  local_refresh_and_push.sh
pc/tests/: test_dedupe.py  test_jobs_repository.py  test_normalize.py
scripts/: dev_android_loop.sh  publish_to_github.sh  run_backend.sh  smoke_api.sh
(+23 files in other folders)
